css/main.css
/* ... */
#tools {
  padding-top: 10px;
}

#tools .section-title{
  text-align: center;
}

.tool{
  max-width: 980px;
  margin: 36px auto;
  clear: both;
  padding: 20px;
}

.tool div, .element div{
  padding: 0 30px;
  display: table-cell;
  vertical-align: middle;
  height: 250px;
}

.tool h4{
  font-size: 20px;
}

.tool p{
  margin: 5px 0px 0px;
  color: #666;
  line-height: 32px;
}

.tool .img{
  float: right;
  height: 250px;
  max-width: 20%;
  width: 320px;
  margin: 0 0 0 20px;
}

.tool:nth-child(even) .img{
  float: left;
  margin: 0 20px 0 0;
}

.guide{
  background-color: #f8f1fa;
}
  
.guide a.button.hollow{
  border-color: #A968B5;
  color: #A968B5;
}

.guide a.button.hollow:hover{
  background-color: #A968B5;
  color: white;
}

.indiemapper{
  background-color: #edf5fa;
}

.colorbrewer{
  background-color: #f4fbf9;
}

.colorbrewer a.button.hollow{
  border-color: #398E7A;
  color: #398E7A;
}

.colorbrewer a.button.hollow:hover{
  background-color: #398E7A;
}

.typographic{
  background-color: #f7f2e9;
}

.typographic a.button.hollow{
  border-color: #BA8B36;
  color: #BA8B36;
}

.typographic a.button.hollow:hover{
  background-color: #BA8B36;
}

/* INDUSTRIES */
#intro{
  background: #e7f4fc;
  background-color: #EFF1F2;
  background: -moz-linear-gradient(-45deg, #e7f4fc 0%, #fff6e6 100%);
  background: -webkit-linear-gradient(-45deg, #e7f4fc 0%,#fff6e6 100%);
  background: linear-gradient(-45deg, #e7f4fc 0%,#fff6e6 100%);
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e7f4fc', endColorstr='#fff6e6',GradientType=0 );
  padding: 40px 20%;
}

#intro p{
  font-size: 24px;
  line-height: 30px;
}

#intro p:first-child:first-letter {
  float: left;
  font-weight: bold;
  font-size: 60px;
  line-height: 56px;
  padding-right: 4px;
  padding-top: 4px;
}

a#contact-bar{
  background-color: #58A2D8;
  color: white;
  font-weight: 300;
  padding: 30px;
  margin: 30px auto;
  display: inline-block;
}

a#contact-bar b{
  color: white;
  font-weight: 700;
}

section#icons, section#case-studies{
  margin: 0 10%;
}

section#icons h2, section#case-studies h2{
  text-align: center;
  margin-bottom: 20px;
}

.icon-service{
  width: 33%;
  padding-right: 20px;
  margin-bottom: 20px;
  min-width: 230px;
  float: left;
  box-sizing: border-box;
}

.icon-service .fa-layers{
  margin: 0 0 10px -10px;
}

.icon-service p{
  font-size: 16px;
  margin-top: 0.25em;
}

.case-study.left{
  margin-left: -10vw;
}

.case-study.right{
  margin-right: -10vw;
}

.case-study .title-container{
  width: 100vw;
  display:flex;
  justify-content:center;
  align-items:center;
}

.case-study.right .title-container{
  margin-left: -10vw;
}

.case-study h3{
  text-transform: uppercase;
  color: white;
  font-weight: normal;
  margin-bottom: 40px;
  padding: 10px 50px;
  text-align: center;
}

.case-study.color-red h3{
  background-color: #E34A33;
}

.case-study.color-purple h3{
  background-color: #763E74;
}

.case-study.color-green h3{
  background-color: #318850;
}

.case-study > img, .case-study blockquote{
  float: left;
  margin: 30px 40px 80px 0;
}

.case-study > img{
  max-height: 480px;
  max-width: 40%;
  float: left;
  box-shadow: 0 0 10px rgba(0,0,0,.25);
}

.case-study.right > img{
  float: right;
  margin-left: 40px;
  margin-right: 0;
}

.case-study blockquote{
  clear: both;
  width: 30%;
  margin-left: 5%;
  margin-right: calc(5% + 40px);
  box-sizing: border-box;
  border-left: 2px solid black;
  padding-left: 30px;
}

.case-study.right blockquote{
  margin-right: 5%;
  margin-left: calc(5% + 40px);
  padding-right: 30px;
  float: right;
}

.case-study.color-red blockquote{
  border-left-color: #E34A33;
}

.case-study.color-purple blockquote{
  border-left-color: #763E74;
}

.case-study.color-purple blockquote{
  border-left-color: #318850;
}

.case-study blockquote::before{
  content: '“';
  font-size: 150px;
  position: absolute;
  margin: -10px;
}

.case-study.color-red blockquote::before{
  color: #E34A33;
}

.case-study.color-purple blockquote::before{
  color: #763E74;
}

.case-study.color-purple blockquote::before{
  color: #318850;
}

.case-study .project-title{
  padding: 30px 0;
}

.case-study.right .project-title{
  padding-left: 40px;
  margin-left: -40px;
}

.case-study.color-red .project-title{
  background-color: #FDF0ED;
}

.case-study.color-purple .project-title{
  background-color: #FAF0FA;
}

.case-study.color-green .project-title{
  background-color: #EFF8F2;
}

.project-title p{
  margin-bottom: 0;
}

/* ABOUT, TEAM, CONTACT */
section.text{
  margin: 20px 20%;
  text-align: center;
  line-height: 26px;
  padding-top: 10px;
}

.element p{
  line-height: 32px;
  margin-top: 0px;
  }

#data-design-code, #personnel{
  margin: 20px 80px 80px;
  padding-top: 10px;
}

#personnel {
  margin-top: 0;
}

section.text p{
  text-align: left;
  color: #333;
  line-height: 32px;
}

#data-design-code p, #personnel p{
  color: #333;
}

#madison img {
  display: block;
  margin: 0 auto;
  max-width: 100%;
}

#madison p {
  text-align: center;
  margin: 5px 0 0 0;
  font-size: 16px;
}

.person {
  margin-bottom: 80px;
}

.person img {
  width: 150px;
}

.person div {
  margin-left: 200px;
}

.person h3 a {
  color: #333;
}

span.big{
font-size: 30px;
}

.contact{
  background-color: #EFF1F2;
  padding: 30px;
}

.contact h4, .newsletter h4{
  text-align: left;
}

.newsletter{
  background-color: #E7F4FC;
  float: left;
  width: 50%;
  padding: 20px;
  margin: 0 40px 40px 0;
  box-sizing: border-box;
}

form input, form textarea {
  width: 100%;
  padding: 10px 25px;
  margin: 0 0 10px 0;
  display: inline-block;
  font-family: 'Lato', sans-serif;
  font-weight: 300;
  font-size: 18px;
  line-height: 26px;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
}

form label{
  font-weight: 700;
  font-size: 16px;
}

button.submit{
  margin-bottom: 0;
  margin-top: 0;
}

.sending{
  font-weight: bold;
  line-height: 60px;
  display: none;
}
/* ... */

